# CS787

./: .gitignore  README.md  REPORT.md  STATUS.md  USAGE_GUIDE.md  biomedbert_256_images.csv  biomedbert_256_metrics.txt  config.yaml  evaluate_results.sh  fundus_320_images.csv  fundus_320_metrics.txt  generate.py  generate_all_modalities.sh  generate_diverse_fundus.sh  main.py  medical_metrics_results.json  project-report.md  pyproject.toml  real_images.csv  simple_generate.py  start.sh
RLHF/: README.md  __init__.py  generate.py  main.py  test_run.py
RLHF/config/: config.yaml
RLHF/src/raters/: rating_system.py
RLHF/src/rl/: policy.py
RLHF/src/selector/: receive_selector.py
RLHF/src/synthetic/: synthetic_system.py
RLHF/src/utils/: __init__.py  device_utils.py  medical_processor.py  training_utils.py
datasets/: README.md  medical_ratings.csv
datasets/example/: example_generated.csv  example_prefixed.csv  fundus_only.csv
metrics/: README.md  metrics.py
scripts/: e2e_rlhf_pipeline.sh  generate.sh  train.sh
training/: classifier.py  model.py
utils/: __init__.py  attention_gates.py  device_utils.py  embedderr.py  medical_processor.py  medical_text_encoder.py  prompt_utils.py  training_utils.py  unet.py
